# pynautobot

./: .bandit.yml  .dockerignore  .flake8  .gitignore  .readthedocs.yml  .travis.yml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  invoke.example.yml  mkdocs.yml  pyproject.toml  setup.py  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  py2.yml  py3.yml  tests.yml  trigger_manual.yml  trigger_pr_main.yml  trigger_pr_normal.yml  trigger_release.yml  trigger_scheduled.yml  upstream_testing.yml
changes/: +ci.housekeeping  +local_testing.documentation  +release-notes.housekeeping  +test.housekeeping  202.removed  223.added  229.added  263.added  273.housekeeping  275.housekeeping  276.housekeeping  278.housekeeping  283.housekeeping  285.documentation  287.fixed  292.housekeeping  294.housekeeping  295.fixed  301.housekeeping  302.fixed  303.housekeeping  304.added  304.documentation  307.fixed  309.fixed  313.documentation  316.changed  316.housekeeping  318.added  322.fixed  334.dependencies  335.fixed  336.changed  340.documentation  343.added  344.housekeeping  351.housekeeping  353.added  356.changed  366.housekeeping  (+8 more)
development/: Dockerfile  Dockerfile.dockerignore  creds.example.env  dev.env  docker-compose.yml  towncrier_template.j2
docs/: IPAM.rst  Makefile  advanced.rst  basic.rst  conf.py  endpoint.rst  index.rst  release_notes.md  request.rst  requirements.txt  response.rst
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: index.md  version_1.0.1.md  version_1.0.2.md  version_1.0.3.md  version_1.0.4.md  version_1.0.md  version_1.1.0.md  version_1.1.1.md  version_1.1.2.md  version_1.1.md  version_1.2.0.md  version_1.2.1.md  version_1.2.2.md  version_1.2.md  version_1.3.md  version_1.4.md  version_1.5.0.md  version_1.5.2.md  version_1.5.md  version_2.0-rc1.md  version_2.0.0.md  version_2.0.1.md  version_2.0.2.md  version_2.0.md  version_2.1.0.md  version_2.1.1.md  version_2.1.md  version_2.2.md  version_2.3.1.md  version_2.3.md  version_2.4.md  version_2.5.md  version_2.6.md
docs/advanced/: create.rst  delete.rst  graphql.rst  index.rst  read.rst  record.rst  session.rst  update.rst
docs/api/: index.md  index.rst
docs/api/core/: api.md  api.rst  app.md  app.rst  endpoint.md  endpoint.rst  graphql.rst  index.md  index.rst  query.md  query.rst  response.md  response.rst  util.md  util.rst
docs/api/models/: circuits.md  circuits.rst  dcim.md  dcim.rst  extras.md  extras.rst  index.rst  ipam.md  ipam.rst  virtualization.md  virtualization.rst
docs/assets/: extra.css
docs/assets/overrides/partials/: copyright.html
docs/basic/: api.rst  index.md  index.rst  install.rst
docs/basic/crud/: create.md  create.rst  delete.rst  index.rst  read.md  read.rst  update.rst
docs/dev/: testing_locally.md
docs/dev/advanced/: delete.md  read.md
docs/dev/basic/: index.md
docs/dev/code_reference/core/: api.md  app.md  endpoint.md  graphql.md  query.md  response.md  util.md
docs/dev/code_reference/models/: circuits.md  cloud.md  dcim.md  extras.md  ipam.md  users.md  virtualization.md
docs/user/: lib_overview.md
docs/user/advanced/: create.md  graphql.md  index.md  read.md  record.md  render_jinja_template.md  session.md  update.md
docs/user/basic/: api.md  examples.md  nautobot_apps.md
docs/user/basic/crud/: delete.md  index.md  update.md
licenses/: digitalocean.txt
pynautobot/: __init__.py
pynautobot/core/: __init__.py  api.py  app.py  endpoint.py  graphql.py  query.py  response.py  util.py
pynautobot/models/: __init__.py  circuits.py  cloud.py  dcim.py  extras.py  ipam.py  users.py  virtualization.py
tests/: __init__.py  conftest.py  test_api.py  test_app.py  test_circuits.py  test_dcim.py  test_extras.py  test_graphql.py  test_ipam.py  test_tenancy.py  test_users.py  test_virtualization.py  util.py
tests/fixtures/circuits/: circuit.json  circuit_termination.json  circuit_terminations.json  circuit_type.json  circuits.json  provider.json
tests/fixtures/core/: render_jinja_template.json
tests/fixtures/dcim/: cable.json  cables.json  console_port.json  console_port_template.json  console_server_port.json  console_server_port_template.json  device.json  device_bay.json  device_bay_template.json  device_role.json  device_type.json  devices.json  interface.json  interface_connection.json  interface_template.json  interfaces_1.json  interfaces_2.json  manufacturer.json  platform.json  power_outlet.json  power_outlet_template.json  power_port.json  power_port_template.json  rack.json  rack_reservation.json  rack_role.json  region.json  site.json  virtual_chassis_device.json
tests/fixtures/extras/: custom_field_choices.json  custom_fields.json  dynamic_group.json  dynamic_groups.json  members.json
tests/fixtures/ipam/: aggregate.json  available-ips-post.json  available-prefixes-post.json  ip_address.json  namespace.json  namespaces.json  prefix.json  prefixes.json  rir.json  role.json  vlan.json  vlan_group.json  vrf.json
tests/fixtures/tenancy/: tenant.json  tenant_group.json
tests/fixtures/users/: group.json  permission.json  user.json
tests/fixtures/virtualization/: cluster.json  cluster_group.json  cluster_type.json  interface.json  virtual_machine.json
tests/integration/: conftest.py  test_api_version.py  test_app.py  test_cloud.py  test_core.py  test_data_validation.py  test_dcim.py  test_default_filters.py  test_endpoint.py  test_exclude_m2m.py  test_extras.py  test_ipam.py  test_load_balancers.py  test_pytest_docker.py  test_query.py  test_response.py  test_vpn.py  test_wireless.py
tests/unit/: test_api_version.py  test_endpoint.py  test_query.py  test_request.py  test_response.py
