# This file has been modified by NetworktoCode, LLC.

[tool.poetry]
name = "pynautobot"
version = "2.1.1"
description = "Nautobot API client library"
authors = ["Network to Code, LLC <opensource@networktocode.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["Nautobot"]
classifiers = [
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
]
repository = "https://github.com/nautobot/pynautobot"
homepage = "https://nautobot.com"
documentation = "https://pynautobot.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.30.0"
# requests doesn't support `urllib3` 2.0 yet see: https://github.com/psf/requests/issues/6432
urllib3 = ">=1.21.1 <1.27"
packaging = "^23.2"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest = "^8.1.1"
mkdocs = "^1.6.0"
watchdog = "^4.0.0"
mkdocs-material = "^9.5.19"
mkdocstrings = "^0.24.3"
mkdocstrings-python = "^1.10.0"
markdown-data-tables = "^1.0.0"
mkdocs-version-annotations = "^1.0.0"
pyyaml = "^6.0.1"
pylint = "^3.1.0"
pydocstyle = "^6.3.0"
yamllint = "^1.35.1"
invoke = "^2.2.0"
toml = "^0.10.2"
flake8 = "^7.0.0"
attrs = "^23.2.0"
black = "^24.4.2"
bandit = "^1.7.8"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
  | .devicetype-library/
)
'''

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx = "^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "-vv"
