# This file has been modified by NetworktoCode, LLC.

[tool.poetry]
name = "pynautobot"
version = "2.6.1"
description = "Nautobot API client library"
authors = ["Network to Code, LLC <opensource@networktocode.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["Nautobot"]
classifiers = [
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
repository = "https://github.com/nautobot/pynautobot"
homepage = "https://nautobot.com"
documentation = "https://pynautobot.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
urllib3 = "^2.2.3"
packaging = "^23.2"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest = "^8.1.1"
pytest-timeout = "^2.3.1"
mkdocs = "^1.6.0"
watchdog = "^4.0.0"
mkdocs-material = "9.5.32"
mkdocstrings = "0.25.2"
mkdocs-autorefs = "1.3.1"
mkdocstrings-python = "1.10.8"
griffe = "1.1.1"
markdown-data-tables = "^1.0.0"
mkdocs-version-annotations = "^1.0.0"
pyyaml = "^6.0.1"
pylint = "^3.1.0"
pydocstyle = "^6.3.0"
yamllint = "^1.35.1"
invoke = "^2.2.0"
toml = "^0.10.2"
flake8 = "^7.0.0"
attrs = "^23.2.0"
black = "^24.4.2"
bandit = "^1.7.8"
towncrier = "^24.8.0"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
  | .devicetype-library/
)
'''

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx = "^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    duplicate-code,
    cyclic-import,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "-vv"

[tool.towncrier]
package = "pynautobot"
directory = "changes"
filename = "docs/admin/release_notes/version_2.6.md"
template = "development/towncrier_template.j2"
start_string = "<!-- towncrier release notes start -->"
issue_format = "[#{issue}](https://github.com/nautobot/pynautobot/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "housekeeping"
name = "Housekeeping"
showcontent = true
