# This file has been modified by NetworktoCode, LLC.

[tool.poetry]
name = "pynautobot"
version = "3.0.0"
description = "Nautobot API client library"
authors = ["Network to Code, LLC <opensource@networktocode.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["Nautobot"]
classifiers = [
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
repository = "https://github.com/nautobot/pynautobot"
homepage = "https://nautobot.com"
documentation = "https://docs.nautobot.com/projects/pynautobot/"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"
urllib3 = ">=1.21.1,<3"
packaging = ">=23.2"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest = "^8.1.1"
pytest-timeout = "^2.3.1"
mkdocs = "^1.6.0"
watchdog = "^4.0.0"
mkdocs-material = "9.5.32"
mkdocstrings = "0.25.2"
mkdocs-autorefs = "1.3.1"
mkdocs-redirects = "^1.2.2"
mkdocstrings-python = "1.10.8"
griffe = "1.1.1"
markdown-data-tables = "^1.0.0"
mkdocs-version-annotations = "^1.0.0"
pyyaml = "^6.0.1"
pylint = "^3.1.0"
yamllint = "^1.35.1"
invoke = "^2.2.0"
toml = "^0.10.2"
attrs = "^23.2.0"
towncrier = "^24.8.0"
ruff = "*"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F", "E", "W",  # flake8
    "S",  # bandit
    "I",  # isort
]
ignore = [
    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D203", # 1 blank line required before class docstring

    # D212 is enabled by default in google convention, and complains if we have a docstring like:
    # """
    # My docstring is on the line after the opening quotes instead of on the same line as them.
    # """
    # We've discussed and concluded that we consider this to be a valid style choice.
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line

    # Produces a lot of issues in the current codebase.
    "D401", # First line of docstring should be in imperative mood
    "D407", # Missing dashed underline after section
    "D416", # Section name ends in colon
    "E501", # Line too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
    "S"
]

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx = "^(_|test_|Meta$)"
# many methods take 'id' as a parameter
allowed-redefined-builtin = "id"

[tool.pylint.messages_control]
disable = """,
    line-too-long,
    duplicate-code,
    cyclic-import,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests/"
addopts = "-vv"

[tool.towncrier]
package = "pynautobot"
directory = "changes"
filename = "docs/release_notes.md"
template = "changes/towncrier_template.j2"
start_string = "<!-- towncrier release notes start -->"
issue_format = "[#{issue}](https://github.com/nautobot/pynautobot/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "housekeeping"
name = "Housekeeping"
showcontent = true
